why doesnt the turquoise navbar highlighting active class not work?

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
   function indicatePageOnNav(){
     var thisPageName = $('main').data('pageName'),
         navItem = $('#primary-nav').find('a:contains("' + thisPageName + '")');
-    navItem.attr('class', 'active');
+    // navItem.attr('class', 'active'); /* doesnt work in heroku. why?? */
+    navItem.css('color', 'turquoise');
   }
 </script>
 
