contact page linkedin link opens new tab now

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,7 +2,7 @@
   <section class="section-block bg-image" id="bg-contact">
 
     <h1 class="section-title">Let's talk!</h1>
-    <a href="https://www.linkedin.com/in/adrianmhlin">linkedin/in/adrianmhlin</a>
+    <a href="https://www.linkedin.com/in/adrianmhlin" target="_blank">linkedin/in/adrianmhlin</a>
     <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
   </section>
 </main>
