resume updated contact details

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -6,3 +6,6 @@
     <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
   </section>
 </main>
+
+
+<!-- MAYBE MAKE THIS 'find me' so i can put social media things here -->
