--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,8 @@
-<main data-page-name="About me"></main>
+<main data-page-name="About me">
 
-<div class="page" id="page-experience">
   <section class="section-block" id="about-me">
+    
+    <img src="/images/headshot.jpg" alt="Adrian Lin">
     <h2 class="section-title">About me</h2>
     <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
   </section>
@@ -54,7 +55,7 @@
       
     </div>
   </section>
-</div>
+</main>
 
 <script>
 
