--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -7,40 +7,8 @@
     <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
   </section>
 
-  <div class="center-bar">
-      <h4>In my free time I...</h4>
-      <ul class="child">
-        <li class="interest">
-          <a href="https://github.com/AdrianMhLin">
-            <img src="/images/icons/interests/coding.png" alt="coding">
-            <h5>Code up app ideas</h5>
-          </a>
-        </li>
-
-        <li class="interest">
-          <a href="https://www.goodreads.com/user/show/42846878-adrian-mh-lin">
-            <img src="/images/icons/interests/reading.png" alt="reading">
-            <h5>Read up on new skills</h5>
-          </a>
-        </li>
-
-        <li class="interest">
-          <a href="https://www.duolingo.com/AdrianMhLin">
-            <img src="/images/icons/interests/language.png" alt="languages">
-            <h5>Learn (human) languages</h5>
-          </a>
-        </li>
-
-        <li class="interest">
-          <a href="https://soundcloud.com/adrianmhlin">
-            <img src="/images/icons/interests/flamenco.png" alt="flamenco">
-            <h5>Play Flamenco guitar</h5>
-          </a>
-        </li>
-
-      </ul>
-  </div>
-
+  <!-- interests -->
+  <%= render 'home/aboutme_partials/interests' %>
 
   <section class="section-block">
 
