--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<main data-page-name="About me">
+<main data-page-name="About me" id="page-about-me">
 
   <section class="section-block" id="about-me">
 
