--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,8 @@
 <main data-page-name="About me" id="page-about-me">
 
-  <section class="section-block" id="about-me">
+  <section class="section-block">
 
-    <img src="/images/headshot.jpg" alt="Adrian Lin">
+    <img class="headshot" src="/images/headshot.jpg" alt="Adrian Lin">
     <h2 class="section-title">About me</h2>
     <p>I am a <strong>UX designer & web developer</strong>. I design the human-centered experience and translate it into code in an <strong>intuitive, efficient, and enjoyable</strong> manner. I believe in the power of bringing interdisciplinary fields of knowledge to <strong>tackle problems holistically</strong> so I am constantly learning and applying new skills.</p>
   </section>
