changed min widths to max width for phone responsive style

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 /* mobile version */
-@media screen and (min-width:200px) {
+@media screen and (max-width:500px) {
 
 	h1,h2,h3,h4,h5,h6 {
 		text-align: center;
@@ -30,7 +30,6 @@
 		top:10vw;
 	}
 
-	#page-about-me 
 
 
 
