--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -153,10 +153,12 @@
 	/*about me */
 	#page-about-me .headshot {
 		width:15em;
-		border-radius:100%;
+		border-radius:100% !important;
 		display:block;
 		margin:0 auto;
+		position:relative;
 	}
+
 
 
 	/*INTERESTS*/
