--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,4 +1,4 @@
-<main data-page-name="Landing">
+<main data-page-name="Landing" id="page-landing">
   <h1 style="color:red; padding:0.5em;">Hi, please pardon my website's appearance. I'm still building it! But most relevant stuff is available like my <a href="/resume">resume</a> and my <a href="/ux">UX portfolio</a>. So please, look around!</h1>
 
   <!-- about me -->
