--- a/app/views/home/navbar/_primary_navbar.html.erb
+++ b/app/views/home/navbar/_primary_navbar.html.erb
@@ -13,3 +13,39 @@
   </div>
 </nav>
 
+<nav id="m-primary-nav">
+  <section>
+    <button class="hamburger">&#9776;</button>
+    <button class="cross">&#735;</button>
+  </section>
+
+  <div class="menu">
+    <ul>
+      <li><a href="/">Adrian Lin</a></li> <!-- this will be my logo -->
+      <li><a href="/about">About me</a></li>
+      <li><a href="/resume">Resume</a></li>
+      <li><a href="/ux">UX design</a></li>
+      <li><a href="/coding">Coding</a></li>
+      <li><a href="/contact">Contact</a></li>
+      <li><a href="/blog">Blog</a></li>
+    </ul>
+  </div> 
+</nav>
+
+<script>
+  $( ".cross" ).hide();
+  $( ".menu" ).hide();
+  $( ".hamburger" ).click(function() {
+    $( ".menu" ).slideToggle( "slow", function() {
+      $( ".hamburger" ).hide();
+      $( ".cross" ).show();
+    });
+  });
+
+  $( ".cross" ).click(function() {
+    $( ".menu" ).slideToggle( "slow", function() {
+      $( ".cross" ).hide();
+      $( ".hamburger" ).show();
+    });
+  });
+</script>
