--- a/app/views/home/aboutme_partials/_interests.html.erb
+++ b/app/views/home/aboutme_partials/_interests.html.erb
@@ -3,28 +3,28 @@
   <h4>In my free time I...</h4>
   <ul class="child">
     <li class="interest">
-      <a href="https://github.com/AdrianMhLin" title="Adrian's GitHub">
+      <a href="https://github.com/AdrianMhLin" title="Adrian Lin's GitHub">
         <img src="/images/icons/interests/coding.png" alt="coding">
         <h5>Code up app ideas</h5>
       </a>
     </li>
 
     <li class="interest">
-      <a href="https://www.goodreads.com/user/show/42846878-adrian-mh-lin" title="Adrian's Goodreads">
+      <a href="https://www.goodreads.com/user/show/42846878-adrian-mh-lin" title="Adrian Lin's Goodreads">
         <img src="/images/icons/interests/reading.png" alt="reading">
         <h5>Read up on new skills</h5>
       </a>
     </li>
 
     <li class="interest">
-      <a href="https://www.duolingo.com/AdrianMhLin" title="Adrian's Duolingo">
+      <a href="https://www.duolingo.com/AdrianMhLin" title="Adrian Lin's Duolingo">
         <img src="/images/icons/interests/language.png" alt="languages">
         <h5>Learn (human) languages</h5>
       </a>
     </li>
 
     <li class="interest">
-      <a href="https://soundcloud.com/adrianmhlin" title="Adrian's SoundCloud">
+      <a href="https://soundcloud.com/adrianmhlin" title="Adrian Lin's SoundCloud">
         <img src="/images/icons/interests/flamenco.png" alt="flamenco">
         <h5>Play Flamenco guitar</h5>
       </a>
