--- a/app/views/home/landing_partials/_my_tools.html.erb
+++ b/app/views/home/landing_partials/_my_tools.html.erb
@@ -4,12 +4,12 @@
   <%= image_tag("/images/fornow/my-tools.png", :alt => "my tools") %>
 
 <!-- make a modal that pops down to describe these -->
-<!--
 
+<!-- 
   <ul id="tools-coding" class="child"></ul>
   <ul id="tools-ux" class="child"></ul>
   <ul id="tools-collaboration" class="child"></ul>
--->
+ -->
 
 </section>
 
@@ -37,14 +37,14 @@
   $(document).ready(function(){
 
     
-    attachLis(tools, 'coding', 'tools-coding');
-    attachLis(tools, 'ux', 'tools-ux');
-    attachLis(tools, 'collaboration', 'tools-collaboration');
+    attachToolsLis(tools, 'coding', 'tools-coding');
+    attachToolsLis(tools, 'ux', 'tools-ux');
+    attachToolsLis(tools, 'collaboration', 'tools-collaboration');
 
 
   });
 
-  function attachLis(tools, category, ulId) {
+  function attachToolsLis(tools, category, ulId) {
     var itemsLength = tools[category].length,
         catArray = tools[category];
 
