--- a/app/views/home/landing_partials/_work_samples.html.erb
+++ b/app/views/home/landing_partials/_work_samples.html.erb
@@ -1,13 +1,19 @@
  
-<section class="section-block" id="work-samples">
-  <h2 class="section-title">Featured Work</h2> 
-  <div class="carousel-autoplay">
-    <a href="/ux"><%= image_tag("/images/work_samples/sample1.png") %></a>
-    <a href="/ux"><%= image_tag("/images/work_samples/sample2.png") %></a>
-    <a href="/ux"><%= image_tag("/images/work_samples/sample3.png") %></a>
-    <a href="/ux"><%= image_tag("/images/work_samples/sample4.png") %></a>
-  </div>
-</section>
+
+<h2 class="section-title">Featured Work</h2> 
+<div class="carousel-autoplay" id="featured-work">
+  <a href="/ux"><%= image_tag("/images/work_samples/sample1.png") %></a>
+  <a href="/ux"><%= image_tag("/images/work_samples/sample2.png") %></a>
+  <a href="/ux"><%= image_tag("/images/work_samples/sample3.png") %></a>
+  <a href="/ux"><%= image_tag("/images/work_samples/sample4.png") %></a>
+</div>
+
+<div class="carousel-autoplay" id="m-featured-work">
+  <%= image_tag("/images/work_samples/m-sample1.png") %>
+  <%= image_tag("/images/work_samples/m-sample2.png") %>
+  <%= image_tag("/images/work_samples/m-sample3.png") %>
+</div>
+
 
 <script>
   $(document).ready(function(){
