--- a/app/views/home/landing_partials/_work_samples.html.erb
+++ b/app/views/home/landing_partials/_work_samples.html.erb
@@ -1,6 +1,8 @@
  
 
 <h2 class="section-title">Featured Work</h2> 
+
+<!-- desktop version-->
 <div class="carousel-autoplay" id="featured-work">
   <a href="/ux"><%= image_tag("/images/work_samples/sample1.png") %></a>
   <a href="/ux"><%= image_tag("/images/work_samples/sample2.png") %></a>
@@ -8,6 +10,7 @@
   <a href="/ux"><%= image_tag("/images/work_samples/sample4.png") %></a>
 </div>
 
+<!-- mobile version -->
 <div class="carousel-autoplay" id="m-featured-work">
   <%= image_tag("/images/work_samples/m-sample1.png") %>
   <%= image_tag("/images/work_samples/m-sample2.png") %>
