--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,8 @@
 /* mobile version */
 @media screen and (max-width:500px) {
+	body {
+		margin: 0 !important;
+	}
 
 	h1,h2,h3,h4,h5,h6 {
 		text-align: center;
