--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,6 +38,7 @@
 	#m-primary-nav .menu ul li a { 
 		text-decoration:none;
 	  	margin: 0;
+	  	padding: 0.5em 0 0.5em 0;
 	 	color:#2F4F4F;
 	 	display:block;
 	 	font-size:2em;
@@ -133,6 +134,7 @@
 
 	#bg-landing {
 		background-image: url('/images/bg.jpg');
+		background-size:100% auto;
 		height:40.8vw;
 		text-align: center;
 	}
