--- a/app/views/home/navbar/_primary_navbar.html.erb
+++ b/app/views/home/navbar/_primary_navbar.html.erb
@@ -8,7 +8,7 @@
       <li><a href="/ux">UX design</a></li>
       <li><a href="/coding">Coding</a></li>
       <li><a href="/contact">Contact</a></li>
-      <li><a href="/blog">Blog</a></li>
+      <!-- <li><a href="/blog">Blog</a></li> -->
     </ul>
   </div>
 </nav>
@@ -27,7 +27,7 @@
       <li><a href="/ux">UX design</a></li>
       <li><a href="/coding">Coding</a></li>
       <li><a href="/contact">Contact</a></li>
-      <li><a href="/blog">Blog</a></li>
+      <!-- <li><a href="/blog">Blog</a></li> -->
     </ul>
   </div> 
 </nav>
