--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,10 +1,10 @@
-<main data-page-name="Contact">
-  <section class="section-block bg-image" id="bg-contact">
+<main data-page-name="Contact" id="page-contact">
+  
 
     <h1 class="section-title">Let's talk!</h1>
     <a href="https://www.linkedin.com/in/adrianmhlin" target="_blank">linkedin/in/adrianmhlin</a>
     <h3><a href="mailto:adrianlin.nyc@gmail.com">adrianlin.nyc@gmail.com</a></h3>
-  </section>
+
 </main>
 
 
