--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -7,6 +7,13 @@
 		margin-top:-17vh;
 	}
 
+	#page-contact a {
+		text-align:center;
+		display:block;
+	}
+
+	#page-contact h1 {margin-top:22vh !important;}
+
 }
 
 /* desktop version */
