--- a/app/views/home/navbar/_footer.html.erb
+++ b/app/views/home/navbar/_footer.html.erb
@@ -9,3 +9,16 @@
     </div>
   </nav>
 </footer>
+
+
+<footer id="m-primary-footer">
+  <nav class="">
+    <div class="container">
+      <p>© Adrian Lin | Designed & Coded by Adrian</p>
+      <ul class="nav navbar-nav">
+<!--         <li><a href="#">Previous</a></li>
+        <li><a href="#">Next</a></li> -->
+      </ul>
+    </div>
+  </nav>
+</footer>
