--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -23,8 +23,8 @@
   </section>
 
   <!-- my process -->
-  <section class="section-block bg-image" id="bg-my-process">
-    <h2 class="section-title">My Process</h2>
+  <section class="section-block bg-image" id="my-process">
+    <%= render 'home/landing_partials/my_process' %>
   </section>
 
 
