--- a/app/views/home/landing_partials/_my_process.html.erb
+++ b/app/views/home/landing_partials/_my_process.html.erb
@@ -1,3 +1,41 @@
 <h2 class="section-title">My Process</h2>
-<%= image_tag("/images/fornow/m-my-process.png", :alt => "my process", :id => "m-my-process") %>
 
+<section id="my-process-diagram">
+  <section>
+    <h3>Discover</h3>
+    <div>
+      <h4>User Interviews</h4>
+      <h4>Competitive Research</h4>
+      <h4>Contextual Inquiry</h4>
+    </div>
+  </section>
+
+  <section>
+    <h3>Define</h3>
+    <div>
+      <h4>Affinity mapping</h4>
+      <h4>Persona</h4>
+      <h4>Journey Mapping</h4>
+      <h4>Feature Prioritization</h4>
+    </div>
+  </section>
+
+  <section>
+    <h3>Develop</h3>
+    <div>
+      <h4>Wireframing</h4>
+      <h4>Prototyping</h4>
+      <h4>Usability testing</h4>
+      <h4>Iterating</h4>
+    </div>
+  </section>
+
+  <section>
+    <h3>Deliver</h3>
+    <div>
+      <h4>Presentation</h4>
+      <h4>Handoff</h4>
+    </div>
+  </section>
+
+</section>
