--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
 
 	h1,h2,h3,h4,h5,h6 {
 		text-align: center;
-		margin-top:12vw !important;
+		margin:5vw !important;
 		font-family: helvetica;
 	}
 
