--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,4 @@
+html {overflow-x: hidden;}
 body {
 	color: darkcyan !important;
 	overflow:hidden;
@@ -5,7 +6,7 @@ body {
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
-    overflow-x: hidden;
+
 }
 
 
