copyright now goes to bottom on the appropriate pages

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -20,12 +20,7 @@
 
 <script>
   $(document).ready(function(){
-    $('#primary-footer').css('bottom', 0)
-                        .css('position', 'absolute')
-                        .css('left', '6%');
-
-
-    $('#m-primary-footer').css('bottom', 0);
+    stickFooterAtBottom('primary-footer', 'm-primary-footer');
   });
 </script>
 
