--- a/app/views/home/blog.html.erb
+++ b/app/views/home/blog.html.erb
@@ -6,3 +6,9 @@
 
   <h2>Coming Soon!</h2>
 </main>
+
+<script>
+  $(document).ready(function(){
+    stickFooterAtBottom('primary-footer', 'm-primary-footer');
+  });
+</script>
