--- a/app/views/home/coding.html.erb
+++ b/app/views/home/coding.html.erb
@@ -4,3 +4,9 @@
 
   <h4>If it's any consolation, <strong>I did build this website myself</strong> rather than using a WYSIWYG editor!</h4>
 </main>
+
+<script>
+  $(document).ready(function(){
+    stickFooterAtBottom('primary-footer', 'm-primary-footer');
+  });
+</script>
