--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -7,3 +7,9 @@
 
 </main>
 
+
+<script>
+  $(document).ready(function(){
+    stickFooterAtBottom('primary-footer', 'm-primary-footer');
+  });
+</script>
