--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -20,7 +20,7 @@
 
 <script>
   $(document).ready(function(){
-    stickFooterAtBottom('primary-footer', 'm-primary-footer');
+    stickFooterAtBottom('primary-footer');
   });
 </script>
 
