fixed the appearance of the mobile my process diagram on desktop

--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -93,6 +93,7 @@
 		background-image: url('/images/fornow/my-process.png');
 		height:50vw;
 	}
+	#my-process-diagram {display:none;}
 
 
 	/*---------*/
